--- a/Mifalot-app/src/app/pages/login/login.component.html
+++ b/Mifalot-app/src/app/pages/login/login.component.html
@@ -1,10 +1,18 @@
  
- 
-<div *ngIf = "error" class = "alert alert-warning" role = "alert">
-  <span class = "glyphicon glyphicon-exclamation-sign" aria-hidden = "true"></span>
-  <span class = "sr-only"> Error: </span>
-  {{ error }}
-</div>
+ <!-- Error message -->
+
+ <div class = "container">
+    <div *ngIf = "error" class = "alert alert-warning" role = "alert">
+      <span class = "glyphicon glyphicon-exclamation-sign" aria-hidden = "true"></span>
+      <span class = "sr-only"> Error: </span>
+      {{ error }}
+    </div>
+ </div>
+
+ <!-- /Error Message -->
+
+
+ <!-- Login Form -->
 
 <div class = "modal-dialog">
   <div class = "loginmodal-container">
@@ -24,7 +32,7 @@
 
       <label for = "password" class = "sr-only"> סיסמה </label>
       <div class = "input-group">
-        <input #password type = "password" id = "password" class = "form-control" placeholder = "סיסמה" required = "">
+        <input #password type = "password" id = "password" class = "form-control" placeholder = "סיסמה" required = "" value = 'mifalot'>
         <span class = "input-group-addon"><i class = "fa fa-lock"> </i> </span>
       </div>
 
@@ -37,3 +45,6 @@
     <a [routerLink] = "['/register']" style = "cursor: pointer;"> הירשם כעת </a>
   </div>
 </div>
+
+<!-- /Login Form -->
+
