--- a/Mifalot-app/src/app/pages/users-confirm/users-confirm.component.html
+++ b/Mifalot-app/src/app/pages/users-confirm/users-confirm.component.html
@@ -4,107 +4,127 @@
 
   <app-page-header [item] = "header"> </app-page-header>
 
-<div *ngIf = "!userSelected">
-  <div class = "row" >
-
-    <div *ngFor = "let user of users | async" [ngSwitch] = "user.permission"> 
-      <div *ngSwitchCase = "'4'" class = "col-lg-6 col-md-6 col-xs-6 thumb">
-        <a class = "thumbnail">
+  <div *ngIf = "!userSelected">
+    <div class = "row" >
+      <div *ngFor = "let user of users | async" [ngSwitch] = "user.permission"> 
+        <div *ngSwitchCase = "'4'" class = "col-lg-6 col-md-6 col-xs-6 thumb">
+          <a class = "thumbnail">
             <button (click) = "showUserDetails(user)" type = "button" class = "btn btn-default btn-block" > <i class = "fa fa-user-plus" > </i> <br/>   {{ user.name }} </button>
-        </a>
-        <!--<a *ngSwitchDefault> אין כרגע משתמשים הממתינים לאישור </a>-->
+          </a>
+          <!--<a *ngSwitchDefault> אין כרגע משתמשים הממתינים לאישור </a>-->
+        </div>
       </div>
-      </div>
+    </div>
   </div>
 
-  </div>
-
-  <div *ngIf = "userSelected">
+  <div *ngIf = "userSelected && !userConfirmed">
     <div class = "container">
       <div class = "profile-head">
-    <div class = "row" >
-      <h4 class = "text-center">  :פרטי המשתמש אותו אתה עומד לאשר </h4>
-
-  <div class = "container">
-      <div class = "row">
-        <div class = "col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad" >
-   
-   
-          <div class = "panel panel-info">
-            <div class = "panel-heading">
-              <h3 class = "panel-title text-right"> {{ userName }} <span class = "fa fa-user-circle-o"></span> </h3>
-            </div>
-            <div class = "panel-body">
+        <div class = "row" >
+          <h4 class = "text-center">  :פרטי המשתמש אותו אתה עומד לאשר </h4>
+            <div class = "container">
               <div class = "row">
-                <div class = "col-md-3 col-lg-3 " align = "center"> 
-                  <!--<img alt="User Pic" src="http://babyinfoforyou.com/wp-content/uploads/2014/10/avatar-300x300.png" class="img-circle img-responsive"> -->
+                <div class = "col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad" >
+                  <div class = "panel panel-info">
+                    <div class = "panel-heading">
+                       <h3 class = "panel-title text-right"> {{ user.name }} {{ user.lastName }} <span class = "fa fa-user-circle-o"></span> </h3>
+                    </div>
+                    <div class = "panel-body">
+                      <div class = "row">
+                        <div class = "col-md-3 col-lg-3 " align = "center"> 
+        <!--<img alt="User Pic" src="http://babyinfoforyou.com/wp-content/uploads/2014/10/avatar-300x300.png" class="img-circle img-responsive"> -->
+                        </div>
+                        <div class = "col-md-9 col-lg-9"> 
+                          <table class = "table table-user-information text-right">
+                            <tbody>
+                              <tr>
+                                <td><a href = "{{ userEmail }}"> {{ user.email }} </a></td>
+                                <td> דוא״ל </td>
+                              </tr>
+                              <tr>     
+                                <td> 123-4567-890 </td>
+                                <td> פלאפון </td>   
+                              </tr>
+                              <tr>     
+                                <td> 10.02.16 </td>
+                                <td> תאריך לידה  </td>   
+                              </tr>
+                              <tr>     
+                                <td> זכר </td>
+                                <td> מין </td>   
+                              </tr>
+                            </tbody>
+                          </table>
+                        </div>
+                      </div>
+                    </div>
+                    <div class = "panel-footer">
+                      <a type = "button" class = "btn btn-sm btn-success" (click) = "confirmUser()"> <i class = "glyphicon glyphicon-ok"></i> אשר </a>
+                      <a type = "button" class = "btn btn-sm btn-danger" (click) = "blockUser()"> <i class = "glyphicon glyphicon-remove"></i> חסום </a>
+                    </div>
                   </div>
-                
-                
-                <div class = "col-md-9 col-lg-9"> 
-                  <table class = "table table-user-information text-right">
-                    <tbody>
-            
-                      <tr>
-                        <td><a href = "{{ userEmail }}"> {{ userEmail }} </a></td>
-                        <td> דוא״ל </td>
-                      </tr>
-                      <tr>     
-                        <td> 123-4567-890(Landline) </td>
-                        <td> פלאפון </td>   
-                      </tr>
-                       <tr>     
-                        <td> 10.02.16 </td>
-                        <td> תאריך לידה  </td>   
-                      </tr>
-                       <tr>     
-                        <td> זכר </td>
-                        <td> מין </td>   
-                      </tr>
-                     
-                    </tbody>
-                  </table>
                 </div>
               </div>
             </div>
-                 <div class = "panel-footer">
-                        <a data-original-title = "Broadcast Message" data-toggle = "tooltip" type = "button" class = "btn btn-sm btn-primary"><i class = "glyphicon glyphicon-envelope"></i></a>
-                        <span class = "pull-right">
-                            <a href = "edit.html" data-original-title = "Edit this user" data-toggle = "tooltip" type = "button" class = "btn btn-sm btn-warning"><i class = "glyphicon glyphicon-edit"></i></a>
-                            <a data-original-title="Remove this user" data-toggle = "tooltip" type = "button" class = "btn btn-sm btn-danger"><i class = "glyphicon glyphicon-remove"></i></a>
-                        </span>
-                    </div>
-            
-          </div>
         </div>
       </div>
     </div>
 
+    <button (click) = "resetAll()" class = "btn btn-md btn-primary btn-block" type = "submit"> חזור לדף קודם </button>
 
-      <h4 class = "text-center">  :בחר את סוג המשתמש </h4>
-
-
-
-
-<!--<div class = "btn-group" data-toggle = "buttons">
-			
-			<label class = "btn btn-success active">
-				<input type="radio" name = "options" id = "option2" autocomplete = "off" chacked>
-				<span class = "glyphicon glyphicon-ok"></span> <span style = "color:white"> מנהל אזור </span>
-			</label>
-
-			<label class = "btn btn-primary">
-				<input type = "radio" name = "options" id = "option1" autocomplete = "off">
-				<span class = "glyphicon glyphicon-ok"> </span> <span style = "color:white"> מאמן </span>
-			</label>
-
-
-    </div>-->
   </div>
+
+  <div *ngIf = "userSelected && userConfirmed">
+
+    <div class="alert alert-info text-right" role="alert">
+      <strong> אישור משתמש<br></strong> הנך עומד לאשר את {{ user.name }} {{ user.lastName }} אנא בחר את סוג המשתמש
+    </div>
+
+    <!--<div class = "panel panel-info text-right center">
+      <div class = "panel-heading"> אישור משתמש </div>
+      <div class = "panel-body"> הנך עומד לאשר את {{ user.name }} {{ user.lastName }} אנא בחר את סוג המשתמש </div>
+    </div>-->
+
+    <div class = "row text-center" data-toggle = "buttons">
+
+      <div class = "col-xs-6 col-sm-6 col-md-6 col-lg-6">
+        <label class = "btn btn-info btn-block" (click) = "showTeams('manager')">
+          <input type = "radio" name = "options" id = "option2" autocomplete = "off">
+          <span class = "glyphicon glyphicon-ok text-left"></span> <span class = "text-white"> מנהל אזור </span>
+        </label>
+      </div>
+  
+      <div class = "col-xs-6 col-sm-6 col-md-6 col-lg-6">
+        <label class = "btn btn-warning btn-block" (click) = "showTeams('coach')">
+          <input type = "radio" name = "options" id = "option1" autocomplete = "off">
+          <span class = "glyphicon glyphicon-ok text-left"> </span> <span class = "text-white"> מאמן </span>
+        </label>
+      </div>
+    </div>
+
+    <!-- Show teams -->
+    <div *ngIf = "chooseTeams">
+        <div class = "container">
+          <div class = "row">
+              <div class = "col-md-12 text-center"> 
+                <h5> סמן את הקבוצות אותן תרצה לשייך למשתמש זה </h5> 
+              </div>
+              <div class = "col-sm-4 col-sm-offset-1">
+                  
+                  <div class = "vertical-menu">
+                    <!--<input type = "text" #txtTeamName>-->
+                  <div *ngFor = "let team of teams | async" class = "list-group text-right" [ngSwitch] = "isChecked(team)">
+                    <a *ngIf = "team.coachID == ''" class = "list-group-item" [class.green] = "isChecked(team)" (click) = "saveTeamToAssociate(team)"> {{ team.name }} </a>
+                  </div>
+              </div>
+
+              <button (click) = "associateTeamsToUser()" class = "btn btn-md btn-success btn-block" type = "submit"> שייך קבוצות נבחרות </button>
+              <button (click) = "resetAll()" class = "btn btn-md btn-primary btn-block" type = "submit"> חזור לדף קודם </button>
+     
+        </div>
+      </div>
+     </div>
     </div>
   </div>
-
 </div>
-
-
 
