--- a/Mifalot-app/src/app/pages/home/home.component.html
+++ b/Mifalot-app/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
 <div *ngFor = "let user of user | async">
 
   <!-- Page Content -->
-  <div *ngIf = "user.$key == 'permission' && user.$value != 4" class = "container" >
+  <div *ngIf = "user.$key == 'permission' && user.$value != 4 && user.$value != 5" class = "container" >
 
       <div class = "row" >
 
@@ -12,23 +12,28 @@
             </div>
           </div>
 
+          <!-- ngFor -->
           <div *ngFor = "let button of buttons" class = "col-lg-6 col-md-6 col-xs-6 thumb">
-            <div *ngIf = "button.id != 'users-confirm'" >
-              <a class = "thumbnail" (click) = "navigate(button.id)"> 
-                <button type = "button" class = "btn {{ button.color }} btn-block" > <i class = "{{ button.icon }}" > </i> <br/> {{ button.txt }} </button>
-              </a>
+            <div *ngIf = "button.id != 'users-confirm' && button.id != 'blocked-users'" >
+              <div *ngIf = "user.$key == 'permission' && user.$value == 3">
+                <a class = "thumbnail" (click) = "navigate(button.id)"> 
+                  <button type = "button" class = "btn {{ button.color }} btn-block" > <i class = "{{ button.icon }}" > </i> <br/> {{ button.txt }} </button>
+                </a>
+              </div>
             </div>
-          </div>
         
-        <!-- Users-confirm button -->
-          <div *ngIf = "user.$key == 'permission' && user.$value == 1" class = "col-lg-12 col-md-12 col-xs-12 thumb">
-            <a class = "thumbnail" (click) = "navigate(buttons[4].id)"> 
-              <button type = "button" class = "btn {{ buttons[4].color }} btn-block" > <i class = "{{ buttons[4].icon }}" > </i> <br/>  {{ buttons[4].txt }}</button> 
-            </a>
+            <!-- Users-confirm button -->
+            <div *ngIf = "button.id == 'users-confirm' || button.id == 'blocked-users'" >
+              <div *ngIf = "user.$key == 'permission' && user.$value == 1">
+                <a class = "thumbnail" (click) = "navigate(button.id)"> 
+                  <button type = "button" class = "btn {{ button.color }} btn-block" > <i class = "{{ button.icon }}" > </i> <br/>  {{ button.txt }}</button> 
+                </a>
+              </div>
+            </div>
+
           </div>
-
-      </div>
-
+          <!-- /ngFor -->
+    </div>
   </div>
 
 
@@ -38,6 +43,16 @@
       <div class = "panel panel-warning text-right center">
         <div class = "panel-heading"> הינך ממתין לאישור מנהל </div>
         <div class = "panel-body"> זמנית, אינך יכול להשתמש באפליקציה עד אישורך ע״י מנהל. אנא נסה שנית מאוחר יותר </div>
+      </div>
+
+  </div>
+
+   <!-- User was blocked by admin -->
+  <div *ngIf = "user.$key == 'permission' && user.$value == 5" class = "container confirm" >
+
+      <div class = "panel panel-danger text-right center">
+        <div class = "panel-heading"> משתמש זה נחסם </div>
+        <div class = "panel-body"> שים לב, משתמש זה נחסם ע״י מנהל מפעלות </div>
       </div>
 
   </div>
