--- a/Mifalot-app/src/app/pages/users-confirm/users-confirm.component.css
+++ b/Mifalot-app/src/app/pages/users-confirm/users-confirm.component.css
@@ -29,16 +29,96 @@ button
 .profile-head ul li {font-size: 1.2em !important;}
 }
 
-.profile-head h4
+h4, h5, .text-white
 {
     color: white;
 }
 
 /******************/
 
-.btn span.glyphicon {    			
+.btn span.glyphicon 
+{    			
 	opacity: 0;				
 }
-.btn.active span.glyphicon {				
+.btn.active span.glyphicon 
+{				
 	opacity: 1;				
+}
+
+input[type = "radio"]
+{  
+    visibility: hidden;
+}
+
+.green 
+{
+  background: #7acd47;
+  background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0.15, #ace44b),color-stop(1, #7acd47));
+  background-image: -webkit-linear-gradient(bottom, #ace44b 15%, #7acd47 100%);
+  background-image: -moz-linear-gradient(bottom, #ace44b 15%, #7acd47 100%);
+  background-image: -ms-linear-gradient(bottom, #ace44b 15%, #7acd47 100%);
+  background-image: -o-linear-gradient(bottom, #ace44b 15%, #7acd47 100%);
+  background-image: linear-gradient(to bottom, #ace44b 15%, #7acd47 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#7acd47', endColorstr='#ace44b');
+}
+
+
+
+/****************************************/
+/********** Scrollbar Height  ***********/
+
+@media only screen and (max-height: 1366px)
+{
+    .vertical-menu 
+    {
+        height: 1065px;
+    }
+}
+
+@media only screen and (max-height: 1024px)
+{
+    .vertical-menu 
+    {
+        height: 735px;
+    }
+}
+
+@media only screen and (max-height: 736px)
+{
+    .vertical-menu 
+    {
+        height: 280px;
+    }
+}
+
+@media only screen and (max-height: 732px)
+{
+    .vertical-menu 
+    {
+        height: 470px;
+    }
+}
+
+@media only screen and (max-height: 667px)
+{
+    .vertical-menu 
+    {
+        height: 405px;
+    }
+}
+
+@media only screen and (max-height: 640px)
+{
+    .vertical-menu 
+    {
+        height: 380px;
+    }
+}
+
+@media only screen and (max-height: 568px)
+{
+    .vertical-menu 
+    {
+        height: 305px;
+    }
 }
