Back button to login

--- a/Mifalot-app/src/app/pages/registration/registration.component.html
+++ b/Mifalot-app/src/app/pages/registration/registration.component.html
@@ -67,11 +67,11 @@
 
       <br>
 
-      <button  class = "btn btn-md btn-primary btn-block" type = "submit"> הירשם </button>
+      <button class = "btn btn-md btn-primary btn-block" type = "submit"> הירשם </button>
 
     </form>
     <br>
-          <button  class = "btn btn-md btn-primary btn-block"> חזור להתחברות </button>
+          <button class = "btn btn-md btn-primary btn-block" (click) = "goToLogin()"> חזור להתחברות </button>
   </div>)
 </div>
 
