--- a/Mifalot-app/src/app/pages/registration/registration.component.html
+++ b/Mifalot-app/src/app/pages/registration/registration.component.html
@@ -10,7 +10,7 @@
 
     <br>
 
-    <form class = "form-signin" (submit) = "register($event, name.value, lastName.value, email.value, password.value, passwordValidation.value)">
+    <form class = "form-signin" (submit) = "register($event, name.value, lastName.value, phoneNumber.value, email.value, birthDate.value, password.value, passwordValidation.value)">
       <label for = "name" class = "sr-only"> שם פרטי </label>
       <div class = "input-group">
         <input #name type = "text" id = "name" class = "form-control" placeholder = "שם פרטי" required = "">
