--- a/Mifalot-app/src/app/pages/users-confirm/users-confirm.component.html
+++ b/Mifalot-app/src/app/pages/users-confirm/users-confirm.component.html
@@ -42,16 +42,12 @@
                                 <td> דוא״ל </td>
                               </tr>
                               <tr>     
-                                <td> 123-4567-890 </td>
+                                <td> {{ user.phoneNumber }} </td>
                                 <td> פלאפון </td>   
                               </tr>
                               <tr>     
-                                <td> 10.02.16 </td>
+                                <td> {{ user.birthDate }} </td>
                                 <td> תאריך לידה  </td>   
-                              </tr>
-                              <tr>     
-                                <td> זכר </td>
-                                <td> מין </td>   
                               </tr>
                             </tbody>
                           </table>
