--- a/Mifalot-app/src/app/pages/home/home.component.html
+++ b/Mifalot-app/src/app/pages/home/home.component.html
@@ -4,35 +4,32 @@
   <!-- Page Content -->
   <div *ngIf = "user.$key == 'permission' && user.$value != 4 && user.$value != 5" class = "container" >
 
-      <div class = "row" >
+    <div class = "row" >
 
-          <div class = "col-lg-12">
-            <div class = "page-header logo">
-              <img src = "https://firebasestorage.googleapis.com/v0/b/application-d2061.appspot.com/o/logo.jpg?alt=media&token=a0294e5b-4622-4971-8065-38330bc8b12b " />
-            </div>
+      <div class = "col-lg-12">
+        <div class = "page-header logo">
+          <img src = "https://firebasestorage.googleapis.com/v0/b/application-d2061.appspot.com/o/logo.jpg?alt=media&token=a0294e5b-4622-4971-8065-38330bc8b12b " />
+        </div>
+      </div>
+
+      <!-- User buttons -->
+      <div *ngIf = "user.$key == 'permission' && user.$value == 3">
+        <div *ngFor = "let button of buttons" class = "col-lg-6 col-md-6 col-xs-6 thumb">
+          
+          <a class = "thumbnail" (click) = "navigate(button.id)"> 
+            <button type = "button" class = "btn {{ button.color }} btn-block" > <i class = "{{ button.icon }}" > </i> <br/> {{ button.txt }} </button>
+          </a>
+        </div>
+        </div>
+
+        <!-- Admin buttons -->
+          <div *ngIf = "user.$key == 'permission' && user.$value == 1">
+            <div *ngFor = "let button of adminButtons" class = "col-lg-6 col-md-6 col-xs-6 thumb">
+              <a class = "thumbnail" (click) = "navigate(button.id)"> 
+                <button type = "button" class = "btn {{ button.color }} btn-block" > <i class = "{{ button.icon }}" > </i> <br/>  {{ button.txt }}</button> 
+              </a>
           </div>
-
-          <!-- ngFor -->
-          <div *ngFor = "let button of buttons" class = "col-lg-6 col-md-6 col-xs-6 thumb">
-            <div *ngIf = "button.id != 'users-confirm' && button.id != 'blocked-users'" >
-              <div *ngIf = "user.$key == 'permission' && user.$value == 3">
-                <a class = "thumbnail" (click) = "navigate(button.id)"> 
-                  <button type = "button" class = "btn {{ button.color }} btn-block" > <i class = "{{ button.icon }}" > </i> <br/> {{ button.txt }} </button>
-                </a>
-              </div>
-            </div>
-        
-            <!-- Users-confirm button -->
-            <div *ngIf = "button.id == 'users-confirm' || button.id == 'blocked-users'" >
-              <div *ngIf = "user.$key == 'permission' && user.$value == 1">
-                <a class = "thumbnail" (click) = "navigate(button.id)"> 
-                  <button type = "button" class = "btn {{ button.color }} btn-block" > <i class = "{{ button.icon }}" > </i> <br/>  {{ button.txt }}</button> 
-                </a>
-              </div>
-            </div>
-
-          </div>
-          <!-- /ngFor -->
+        </div>
     </div>
   </div>
 
